# tiling-window-manager

./: .gitignore  Cargo.toml  README.md  build.rs  config-safe.toml  config-simple.toml  config.toml
src/: actions.rs  app.rs  commands.rs  config.rs  error.rs  hotkeys.rs  layout.rs  main.rs  monitor.rs  rules.rs  tree.rs  window.rs  workspace.rs
src/infrastructure/win32/: hotkey_api.rs  mod.rs  monitor_api.rs  window_api.rs
src/services/: layout_service.rs  mod.rs  monitor_service.rs  window_service.rs  workspace_service.rs
