[package]
name = "rust-tiling-window-manager"
version = "0.1.0"
edition = "2021"
description = "A keyboard-driven tiling window manager for Windows 11, inspired by i3wm, bspwm, and yabai"
authors = ["Developer"]
license = "MIT"
repository = "https://github.com/user/rust-tiling-window-manager"
readme = "README.md"

[[bin]]
name = "rtwm"
path = "src/main.rs"

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
